--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ override.tf.json
 
 # Ignoring credential files
 hc-fd16295afe104a7d887d3581496-4ad48ad79f5c.json
+credentials.tfrc.json
 
 # ignore locking
 .terraform.lock.hcl
