updated to new instance name

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ override.tf.json
 # Ignoring credential files
 # OLD - hc-fd16295afe104a7d887d3581496-4ad48ad79f5c.json
 hc-08b1d7d140c34dc58d324911da5-e8d7e3ab89f6.json
+hc-08b1d7d140c34dc58d324911da5-fdbdf2a78985.json
 credentials.tfrc.json
 
 # ignore locking
