new json added to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ variables.auto.tfvars
 # ignore workspace
 .code-workspace
 TF-GCP-Cloud-SQL.code-workspace
+hc-cbcba768b6a041738d0450e358a-f5fb40d4b4aa.json
